--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -25,12 +25,14 @@
           </minWidth>
         </Label>
         <Label fx:id="name" styleClass="cell_big_label" />
+        <Region prefWidth="5"/>
+        <FlowPane fx:id="tutorials" />
+        
       </HBox>
-      <FlowPane fx:id="tags" />
-      <FlowPane fx:id="tutorials" />
       <Label fx:id="phone" styleClass="cell_small_label" />
       <Label fx:id="email" styleClass="cell_small_label" />
       <Label fx:id="studentId" styleClass="cell_small_label" />
+      <FlowPane fx:id="tags"/>
       <Label fx:id="address" styleClass="cell_small_label" />
     </VBox>
   </GridPane>
