--- a/bin/main/view/PersonListCard.fxml
+++ b/bin/main/view/PersonListCard.fxml
@@ -31,6 +31,7 @@
       <Label fx:id="phone" styleClass="cell_small_label" />
       <Label fx:id="email" styleClass="cell_small_label" />
       <Label fx:id="studentId" styleClass="cell_small_label" />
+      <Label fx:id="telegram" styleClass="cell_small_label" />
       <FlowPane fx:id="tags"/>
       <Label fx:id="address" styleClass="cell_small_label" />
     </VBox>
